python todo kata 1

--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-python-part-1.html#todo-kata-python-part-1">Todo Kata - Python Part 1</a></h2>
+    <p>
+          Posted on October 11, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/python.html">Python</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>,              <a href="https://jameselliothart.github.io/tag/mypy.html">mypy</a>,              <a href="https://jameselliothart.github.io/tag/click.html">click</a>
+    </p>
+  </header>
+  <div>
+      <p>In this part of the <strong>Todo</strong> kata, we will cover the Python implementation.
+If you are new to the series, I would recommend reading the <a href="https://jameselliothart.github.io/todo-kata-introduction">intro</a> first.
+It should give sufficient background to be able to follow along even without being familiar with previous posts.</p>
+<p>Series Outline</p>
+<ol>
+<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li>FSharp Series …</li></ol>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-python-part-1.html#todo-kata-python-part-1">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html#todo-kata-fsharp-part-3">Todo Kata - FSharp Part 3</a></h2>
     <p>
           Posted on October 07, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
@@ -108,7 +134,7 @@ In this final part, we will revisit the <code>done</code> application and modify
 
           &#8226;     Tagged with
 
-              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>,              <a href="https://jameselliothart.github.io/tag/events.html">Events</a>
     </p>
   </header>
   <div>
