--- a/todo-kata-fsharp-part-2.html
+++ b/todo-kata-fsharp-part-2.html
@@ -24,7 +24,7 @@
 
 <meta name="author" content="James Hart" />
 <meta name="description" content="In Part 2 of the FSharp kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro Part 1 - Done Part …" />
-<meta name="keywords" content="Tutorial, FSharp, Todo, Development">
+<meta name="keywords" content="Tutorial, FSharp, Todo, Development, Events">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
 <meta property="og:title" content="Todo Kata - FSharp Part 2"/>
@@ -40,6 +40,7 @@
 <meta property="article:tag" content="FSharp"/>
 <meta property="article:tag" content="Todo"/>
 <meta property="article:tag" content="Development"/>
+<meta property="article:tag" content="Events"/>
 <meta property="og:image" content="/images/me.jpeg">
 
   <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 2</title>
@@ -406,6 +407,7 @@ dotnet run
       <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>
       <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>
       <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
+      <a href="https://jameselliothart.github.io/tag/events.html">Events</a>
     </p>
   </div>
 
