--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>October 11, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-1.html">Todo Kata - Python Part 1</a></dd>
       <dt>October 07, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html">Todo Kata - FSharp Part 3</a></dd>
       <dt>October 06, 2020</dt>
