add python series to outline

--- a/todo-kata-f-part-1.html
+++ b/todo-kata-f-part-1.html
@@ -23,26 +23,26 @@
 
 
 <meta name="author" content="James Hart" />
-<meta name="description" content="Welcome to Part 1 of the FSharp kata to implement to todo list manager discussed in the introduction. In this post, we will implement the done command. We start with done rather than todo because todo will actually depend on functionality in done to save completed items whereas done has …" />
-<meta name="keywords" content="Tutorial, FSharp, Todo, Development">
+<meta name="description" content="Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the introduction. In this post, we will implement the done command. We start with done rather than todo because todo will actually depend on functionality in done to save completed items whereas done has …" />
+<meta name="keywords" content="Tutorial, F#, Todo, Development">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
-<meta property="og:title" content="Todo Kata - FSharp Part 1"/>
-<meta property="og:description" content="Welcome to Part 1 of the FSharp kata to implement to todo list manager discussed in the introduction. In this post, we will implement the done command. We start with done rather than todo because todo will actually depend on functionality in done to save completed items whereas done has …"/>
+<meta property="og:title" content="Todo Kata - F# Part 1"/>
+<meta property="og:description" content="Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the introduction. In this post, we will implement the done command. We start with done rather than todo because todo will actually depend on functionality in done to save completed items whereas done has …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html"/>
+<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-f-part-1.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-10-05 00:00:00-05:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Tutorial"/>
 <meta property="article:tag" content="Tutorial"/>
-<meta property="article:tag" content="FSharp"/>
+<meta property="article:tag" content="F#"/>
 <meta property="article:tag" content="Todo"/>
 <meta property="article:tag" content="Development"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 1</title>
+  <title>A Hart's Eye View &ndash; Todo Kata - F# Part 1</title>
 
 </head>
 <body>
@@ -88,7 +88,7 @@
 <article class="single">
   <header>
       
-    <h1 id="todo-kata-fsharp-part-1">Todo Kata - FSharp Part 1</h1>
+    <h1 id="todo-kata-f-part-1">Todo Kata - F# Part 1</h1>
     <p>
           Posted on October 05, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -98,15 +98,24 @@
 
 
   <div>
-    <p>Welcome to Part 1 of the FSharp kata to implement to todo list manager discussed in the <a href="https://jameselliothart.github.io/todo-kata-introduction">introduction</a>.
+    <p>Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the <a href="https://jameselliothart.github.io/todo-kata-introduction">introduction</a>.
 In this post, we will implement the <code>done</code> command.
 We start with <code>done</code> rather than <code>todo</code> because <code>todo</code> will actually depend on functionality in <code>done</code> to save completed items whereas <code>done</code> has no dependencies.</p>
 <p>Series Outline</p>
 <ol>
 <li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li>F# Series<ol>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a> (you are here)</li>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
+</ol>
+</li>
+<li>Python Series<ol>
+<li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
+<li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
+<li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+</ol>
+</li>
 </ol>
 <p>Full source code is available <a href="https://github.com/jameselliothart/FsTodo">here</a>.</p>
 <h2>Setup</h2>
@@ -385,7 +394,7 @@ The next part of the series will cover creating the <code>todo</code> applicatio
   <div class="tag-cloud">
     <p>
       <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>
-      <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>
+      <a href="https://jameselliothart.github.io/tag/f.html">F#</a>
       <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>
       <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
     </p>
