--- a/todo-kata-f-part-2.html
+++ b/todo-kata-f-part-2.html
@@ -23,27 +23,27 @@
 
 
 <meta name="author" content="James Hart" />
-<meta name="description" content="In Part 2 of the FSharp kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro Part 1 - Done Part …" />
-<meta name="keywords" content="Tutorial, FSharp, Todo, Development, Events">
+<meta name="description" content="In Part 2 of the F# kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro F# Series Part 1 …" />
+<meta name="keywords" content="Tutorial, F#, Todo, Development, Events">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
-<meta property="og:title" content="Todo Kata - FSharp Part 2"/>
-<meta property="og:description" content="In Part 2 of the FSharp kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro Part 1 - Done Part …"/>
+<meta property="og:title" content="Todo Kata - F# Part 2"/>
+<meta property="og:description" content="In Part 2 of the F# kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro F# Series Part 1 …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html"/>
+<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-f-part-2.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-10-06 00:00:00-05:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Tutorial"/>
 <meta property="article:tag" content="Tutorial"/>
-<meta property="article:tag" content="FSharp"/>
+<meta property="article:tag" content="F#"/>
 <meta property="article:tag" content="Todo"/>
 <meta property="article:tag" content="Development"/>
 <meta property="article:tag" content="Events"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 2</title>
+  <title>A Hart's Eye View &ndash; Todo Kata - F# Part 2</title>
 
 </head>
 <body>
@@ -89,7 +89,7 @@
 <article class="single">
   <header>
       
-    <h1 id="todo-kata-fsharp-part-2">Todo Kata - FSharp Part 2</h1>
+    <h1 id="todo-kata-f-part-2">Todo Kata - F# Part 2</h1>
     <p>
           Posted on October 06, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -99,14 +99,23 @@
 
 
   <div>
-    <p>In Part 2 of the FSharp kata, we will implement the <code>todo</code> application.
+    <p>In Part 2 of the F# kata, we will implement the <code>todo</code> application.
 This will allow us to keep track of a todo list, and it will utilize the <code>done</code> functionality we created in the previous post to record the items we complete.</p>
 <p>Series Outline</p>
 <ol>
 <li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li>F# Series<ol>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a></li>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a> (you are here)</li>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
+</ol>
+</li>
+<li>Python Series<ol>
+<li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
+<li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
+<li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+</ol>
+</li>
 </ol>
 <p>Full source code is available <a href="https://github.com/jameselliothart/FsTodo">here</a>.</p>
 <h2>Setup</h2>
@@ -399,12 +408,12 @@ dotnet run
 
 
 <p>Be sure to check the todo.done.txt file to see the completed "my second todo" item appear!</p>
-<p>In the next and final part of the FSharp series, we will circle back and see what it takes to save completed items to a SQLite database instead of a text file.</p>
+<p>In the next and final part of the F# series, we will circle back and see what it takes to save completed items to a SQLite database instead of a text file.</p>
   </div>
   <div class="tag-cloud">
     <p>
       <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>
-      <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>
+      <a href="https://jameselliothart.github.io/tag/f.html">F#</a>
       <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>
       <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
       <a href="https://jameselliothart.github.io/tag/events.html">Events</a>
