--- a/todo-kata-introduction.html
+++ b/todo-kata-introduction.html
@@ -144,14 +144,18 @@ Since I have always found tutorials a great way to learn some aspect of a langua
 <h2>Series Outline</h2>
 <ol>
 <li>Intro (you are here)</li>
-<li>FSharp</li>
+<li>F# Series<ol>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a></li>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
 <li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
-<li>Python</li>
+</ol>
+</li>
+<li>Python Series<ol>
 <li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
 <li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
 <li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+</ol>
+</li>
 </ol>
   </div>
   <div class="tag-cloud">
