--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
   </header>
   <div>
       <p>In this part of the <strong>Todo</strong> kata, we will cover the Python implementation.
-If you are new to the series, I would recommend reading the <a href="https://jameselliothart.github.io/todo-kata-introduction">intro</a> first.
+If you are new to the series, I would recommend reading the <a href="todo-kata-introduction">intro</a> first.
 It should give sufficient background to be able to follow along even without being familiar with previous posts.</p>
 <p>Series Outline</p>
 <ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
-<li>FSharp Series …</li></ol>
+<li><a href="todo-kata-introduction">Intro</a></li>
+<li>F# Series …</li></ol>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/todo-kata-python-part-1.html#todo-kata-python-part-1">    Continue reading
 </a>
@@ -105,7 +105,7 @@ It should give sufficient background to be able to follow along even without bei
 </article>
 <article>
   <header>
-    <h2><a href="https://jameselliothart.github.io/todo-kata-f-part-3.html#todo-kata-f-part-3">Todo Kata - F# Part 3</a></h2>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html#todo-kata-fsharp-part-3">Todo Kata - FSharp Part 3</a></h2>
     <p>
           Posted on October 07, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -120,14 +120,14 @@ It should give sufficient background to be able to follow along even without bei
 In this final part, we will revisit the <code>done</code> application and modify it to work with a SQLite database instead of a text file.</p>
 <p>(Note: F# has a great feature called a <a href="https://docs.microsoft.com/en-us/dotnet/fsharp/tutorials/type-providers/">type provider</a> which can give strongly typed compile-time access …</p>
       <br>
-      <a class="btn" href="https://jameselliothart.github.io/todo-kata-f-part-3.html#todo-kata-f-part-3">    Continue reading
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html#todo-kata-fsharp-part-3">    Continue reading
 </a>
   </div>
   <hr />
 </article>
 <article>
   <header>
-    <h2><a href="https://jameselliothart.github.io/todo-kata-f-part-2.html#todo-kata-f-part-2">Todo Kata - F# Part 2</a></h2>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html#todo-kata-fsharp-part-2">Todo Kata - FSharp Part 2</a></h2>
     <p>
           Posted on October 06, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -142,18 +142,18 @@ In this final part, we will revisit the <code>done</code> application and modify
 This will allow us to keep track of a todo list, and it will utilize the <code>done</code> functionality we created in the previous post to record the items we complete.</p>
 <p>Series Outline</p>
 <ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li><a href="todo-kata-introduction">Intro</a></li>
 <li>F# Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 …</a></li></ol></li></ol>
+<li><a href="todo-kata-fsharp-part-1">Part 1 …</a></li></ol></li></ol>
       <br>
-      <a class="btn" href="https://jameselliothart.github.io/todo-kata-f-part-2.html#todo-kata-f-part-2">    Continue reading
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html#todo-kata-fsharp-part-2">    Continue reading
 </a>
   </div>
   <hr />
 </article>
 <article>
   <header>
-    <h2><a href="https://jameselliothart.github.io/todo-kata-f-part-1.html#todo-kata-f-part-1">Todo Kata - F# Part 1</a></h2>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html#todo-kata-fsharp-part-1">Todo Kata - FSharp Part 1</a></h2>
     <p>
           Posted on October 05, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -164,11 +164,11 @@ This will allow us to keep track of a todo list, and it will utilize the <code>d
     </p>
   </header>
   <div>
-      <p>Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the <a href="https://jameselliothart.github.io/todo-kata-introduction">introduction</a>.
+      <p>Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the <a href="todo-kata-introduction">introduction</a>.
 In this post, we will implement the <code>done</code> command.
 We start with <code>done</code> rather than <code>todo</code> because <code>todo</code> will actually depend on functionality in <code>done</code> to save completed items whereas <code>done</code> has …</p>
       <br>
-      <a class="btn" href="https://jameselliothart.github.io/todo-kata-f-part-1.html#todo-kata-f-part-1">    Continue reading
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html#todo-kata-fsharp-part-1">    Continue reading
 </a>
   </div>
   <hr />
@@ -209,7 +209,7 @@ Each kata will assume a working development environment (I will be working in <a
   <div>
       <h2>Welcome</h2>
 <p>Welcome to the third and final post in the Maps of DevOps series!
-In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
+In <a href="maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
 We used this as …</p>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">    Continue reading
@@ -232,7 +232,7 @@ We used this as …</p>
   <div>
       <h2>Welcome</h2>
 <p>Welcome to the second post in the Maps of DevOps series!
-In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way</a>, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective.
+In <a href="maps-of-devops-the-first-way">The First Way</a>, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective.
 In doing so, we discovered that Single …</p>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">    Continue reading
@@ -318,7 +318,7 @@ look forward to more content in the future!</p>
 
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
