--- a/maps-of-devops-the-third-way.html
+++ b/maps-of-devops-the-third-way.html
@@ -101,16 +101,16 @@
   <div>
     <h2>Welcome</h2>
 <p>Welcome to the third and final post in the Maps of DevOps series!
-In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
+In <a href="maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
 We used this as an analogy for a Development organization delivering working software to production rather than letting it sit undeployed, and this inherently meant that the strict boundary between coding applications (development) and deploying applications (operations) needed to be broken down.
-This focus on creating value worked well when we knew what we were doing (when we were in Known Territory), but in <a href="https://jameselliothart.github.io/maps-of-devops-the-second-way">The Second Way: Amplify Feedback Loops</a> we found it was insufficient once Anomaly appeared and cast us into the Unknown, aka Chaos.
+This focus on creating value worked well when we knew what we were doing (when we were in Known Territory), but in <a href="maps-of-devops-the-second-way">The Second Way: Amplify Feedback Loops</a> we found it was insufficient once Anomaly appeared and cast us into the Unknown, aka Chaos.
 To handle this, we needed to be able to proactively gather and respond to information about the validity of our assumptions and the effects of our efforts.</p>
 <h2>A Return to the Beginning</h2>
 <p>We noted in The First Way that the Development and Operations organizations are composed of smaller units just as the business was composed of Dev and Ops.</p>
 <p>Now let us expand our scenario to a full-scale business enterprise: instead of one Folder, there is a team of Folders reporting to a team lead with each department composed of many teams, some middle managers, and department heads.
 As a large organization is not created <em>ex nihilo</em> but evolves from a small one, one can imagine the natural expansion a real business would undergo to reach this rather generic org structure.</p>
 <p>At the same time one can also imagine that as our enterprise grows, the department heads, managers, and even team leads get further away from the day-to-day work done by the Folders.
-This is a necessary shift but also creates a dilemma: even if we know <em>what</em> has to happen to improve department efficiency, <em>how</em> do we implement 
+This is a necessary shift but also creates a dilemma: even if we know <em>what</em> has to happen to improve department efficiency, <em>how</em> do we implement
 From this thought experiment, it is obvious that any improvement in the efficiency of a department must have a corresponding improvement in the efficiency in its teams and ultimately the individuals within it.
 It is necessary for higher levels of management to operate at higher levels of abstraction to be able to focus on the broader company or even (maybe especially) industry trends.
 This allows them to know what direction the company or industry are going, what budgetary constraints are in place, etc.
@@ -185,7 +185,7 @@ This is the unavoidable and continual march of entropic decay.</p>
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
