--- a/todo-kata-fsharp-part-2.html
+++ b/todo-kata-fsharp-part-2.html
@@ -27,10 +27,10 @@
 <meta name="keywords" content="Tutorial, F#, Todo, Development, Events">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
-<meta property="og:title" content="Todo Kata - F# Part 2"/>
+<meta property="og:title" content="Todo Kata - FSharp Part 2"/>
 <meta property="og:description" content="In Part 2 of the F# kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro F# Series Part 1 …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-f-part-2.html"/>
+<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-10-06 00:00:00-05:00"/>
 <meta property="article:modified_time" content=""/>
@@ -43,7 +43,7 @@
 <meta property="article:tag" content="Events"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - F# Part 2</title>
+  <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 2</title>
 
 </head>
 <body>
@@ -89,7 +89,7 @@
 <article class="single">
   <header>
       
-    <h1 id="todo-kata-f-part-2">Todo Kata - F# Part 2</h1>
+    <h1 id="todo-kata-fsharp-part-2">Todo Kata - FSharp Part 2</h1>
     <p>
           Posted on October 06, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -103,17 +103,17 @@
 This will allow us to keep track of a todo list, and it will utilize the <code>done</code> functionality we created in the previous post to record the items we complete.</p>
 <p>Series Outline</p>
 <ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li><a href="todo-kata-introduction">Intro</a></li>
 <li>F# Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a> (you are here)</li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
+<li><a href="todo-kata-fsharp-part-1">Part 1 - Done</a></li>
+<li>Part 2 - Todo (you are here)</li>
+<li><a href="todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 <li>Python Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+<li><a href="todo-kata-python-part-1">Part 1 - Done</a></li>
+<li><a href="todo-kata-python-part-2">Part 2 - Todo</a></li>
+<li><a href="todo-kata-python-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 </ol>
@@ -427,7 +427,7 @@ dotnet run
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
