--- a/todo-kata-fsharp-part-3.html
+++ b/todo-kata-fsharp-part-3.html
@@ -27,10 +27,10 @@
 <meta name="keywords" content="Tutorial, F#, Todo, Development, SQLite, Dapper, ORM, SQL">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
-<meta property="og:title" content="Todo Kata - F# Part 3"/>
+<meta property="og:title" content="Todo Kata - FSharp Part 3"/>
 <meta property="og:description" content="Welcome to Part 3 of the F# Todo kata. In this final part, we will revisit the done application and modify it to work with a SQLite database instead of a text file. (Note: F# has a great feature called a type provider which can give strongly typed compile-time access …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-f-part-3.html"/>
+<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-10-07 00:00:00-05:00"/>
 <meta property="article:modified_time" content=""/>
@@ -46,7 +46,7 @@
 <meta property="article:tag" content="SQL"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - F# Part 3</title>
+  <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 3</title>
 
 </head>
 <body>
@@ -92,7 +92,7 @@
 <article class="single">
   <header>
       
-    <h1 id="todo-kata-f-part-3">Todo Kata - F# Part 3</h1>
+    <h1 id="todo-kata-fsharp-part-3">Todo Kata - FSharp Part 3</h1>
     <p>
           Posted on October 07, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -108,17 +108,17 @@ In this final part, we will revisit the <code>done</code> application and modify
 However, the <a href="https://fsprojects.github.io/SQLProvider/">SQLProvider</a> was surprisingly difficult to set up for SQLite, so we will opt for the lightweight <code>Dapper</code> ORM instead.)</p>
 <p>Series Outline</p>
 <ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li><a href="todo-kata-introduction">Intro</a></li>
 <li>F# Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a> (you are here)</li>
+<li><a href="todo-kata-fsharp-part-1">Part 1 - Done</a></li>
+<li><a href="todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
+<li>Part 3 - SQLite (you are here)</li>
 </ol>
 </li>
 <li>Python Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+<li><a href="todo-kata-python-part-1">Part 1 - Done</a></li>
+<li><a href="todo-kata-python-part-2">Part 2 - Todo</a></li>
+<li><a href="todo-kata-python-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 </ol>
@@ -259,7 +259,7 @@ The next installment will cover a <a href="https://www.python.org/">Python</a> i
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
