--- a/todo-kata-introduction.html
+++ b/todo-kata-introduction.html
@@ -129,7 +129,7 @@ $ <span class="k">done</span> w <span class="m">1</span>
 <p>(Note: Technically <code>done</code> is already a shell keyword.)</p>
 <p>We will implement this first by just saving to text files, but we will see that we can design the solution to be flexible enough to switch to saving completed items in a SQLite database with relative ease.
 The curious may read a little more about the motivation for this below.
-Otherwise, continue to the <a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">first kata</a> covering the <a href="https://fsharp.org/">FSharp</a> implementation.</p>
+Otherwise, continue to the <a href="todo-kata-fsharp-part-1">first kata</a> covering the <a href="https://fsharp.org/">F#</a> implementation.</p>
 <h2>Motivation</h2>
 <p>I have worked in environments that sometimes require a large amount of task switching for some time.
 This is generally the result of high priority requests coming in with unpredictable frequency as may be familiar to anyone working on a team that supports other teams or customers.
@@ -145,15 +145,15 @@ Since I have always found tutorials a great way to learn some aspect of a langua
 <ol>
 <li>Intro (you are here)</li>
 <li>F# Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
+<li><a href="todo-kata-fsharp-part-1">Part 1 - Done</a></li>
+<li><a href="todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
+<li><a href="todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 <li>Python Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+<li><a href="todo-kata-python-part-1">Part 1 - Done</a></li>
+<li><a href="todo-kata-python-part-2">Part 2 - Todo</a></li>
+<li><a href="todo-kata-python-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 </ol>
@@ -174,7 +174,7 @@ Since I have always found tutorials a great way to learn some aspect of a langua
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
