--- a/archives.html
+++ b/archives.html
@@ -86,11 +86,11 @@
       <dt>October 11, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-1.html">Todo Kata - Python Part 1</a></dd>
       <dt>October 07, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-f-part-3.html">Todo Kata - F# Part 3</a></dd>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html">Todo Kata - FSharp Part 3</a></dd>
       <dt>October 06, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-f-part-2.html">Todo Kata - F# Part 2</a></dd>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html">Todo Kata - FSharp Part 2</a></dd>
       <dt>October 05, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-f-part-1.html">Todo Kata - F# Part 1</a></dd>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html">Todo Kata - FSharp Part 1</a></dd>
       <dt>October 04, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-introduction.html">Todo Kata - Introduction</a></dd>
       <dt>May 29, 2020</dt>
@@ -108,7 +108,7 @@
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
