--- a/maps-of-devops-the-second-way.html
+++ b/maps-of-devops-the-second-way.html
@@ -104,7 +104,7 @@
   <div>
     <h2>Welcome</h2>
 <p>Welcome to the second post in the Maps of DevOps series!
-In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way</a>, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective.
+In <a href="maps-of-devops-the-first-way">The First Way</a>, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective.
 In doing so, we discovered that Single Piece Flow (SPF) was superior to batching because we could more quickly deliver value.</p>
 <p>Along the way, we also introduced the map of Known Territory (where we are when we know what we are doing) and alluded to the Unknown (where we are when we don't). In this post, we will discuss the important and ever-present mediator between them - Anomaly.</p>
 <h2>Anomaly</h2>
@@ -226,7 +226,7 @@ Getting this feedback before users complain can make all the difference in being
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
