--- a/todo-kata-fsharp-part-1.html
+++ b/todo-kata-fsharp-part-1.html
@@ -27,10 +27,10 @@
 <meta name="keywords" content="Tutorial, F#, Todo, Development">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
-<meta property="og:title" content="Todo Kata - F# Part 1"/>
+<meta property="og:title" content="Todo Kata - FSharp Part 1"/>
 <meta property="og:description" content="Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the introduction. In this post, we will implement the done command. We start with done rather than todo because todo will actually depend on functionality in done to save completed items whereas done has …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-f-part-1.html"/>
+<meta property="og:url" content="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-10-05 00:00:00-05:00"/>
 <meta property="article:modified_time" content=""/>
@@ -42,7 +42,7 @@
 <meta property="article:tag" content="Development"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - F# Part 1</title>
+  <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 1</title>
 
 </head>
 <body>
@@ -88,7 +88,7 @@
 <article class="single">
   <header>
       
-    <h1 id="todo-kata-f-part-1">Todo Kata - F# Part 1</h1>
+    <h1 id="todo-kata-fsharp-part-1">Todo Kata - FSharp Part 1</h1>
     <p>
           Posted on October 05, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
 
@@ -98,22 +98,22 @@
 
 
   <div>
-    <p>Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the <a href="https://jameselliothart.github.io/todo-kata-introduction">introduction</a>.
+    <p>Welcome to Part 1 of the F# kata to implement to todo list manager discussed in the <a href="todo-kata-introduction">introduction</a>.
 In this post, we will implement the <code>done</code> command.
 We start with <code>done</code> rather than <code>todo</code> because <code>todo</code> will actually depend on functionality in <code>done</code> to save completed items whereas <code>done</code> has no dependencies.</p>
 <p>Series Outline</p>
 <ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li><a href="todo-kata-introduction">Intro</a></li>
 <li>F# Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a> (you are here)</li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
+<li>Part 1 - Done (you are here)</li>
+<li><a href="todo-kata-fsharp-part-2">Part 2 - Todo</a></li>
+<li><a href="todo-kata-fsharp-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 <li>Python Series<ol>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-1">Part 1 - Done</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-2">Part 2 - Todo</a></li>
-<li><a href="https://jameselliothart.github.io/todo-kata-python-part-3">Part 3 - SQLite</a></li>
+<li><a href="todo-kata-python-part-1">Part 1 - Done</a></li>
+<li><a href="todo-kata-python-part-2">Part 2 - Todo</a></li>
+<li><a href="todo-kata-python-part-3">Part 3 - SQLite</a></li>
 </ol>
 </li>
 </ol>
@@ -407,7 +407,7 @@ The next part of the series will cover creating the <code>todo</code> applicatio
 </article>
 
     <footer>
-<p>&copy; James Hart 2019</p>
+<p>&copy; James Hart 2020</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
